min-height added to app-homepage - should stop scrolling getting stuck

--- a/src/pages/AppHomepage.scss
+++ b/src/pages/AppHomepage.scss
@@ -1,5 +1,5 @@
 .app-homepage {
-  height: 100svh;
+  min-height: 100svh;
   display: flex;
   background: #020f1c;
 
